Thu May 22 19:38:02 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/orbsvcs/Notify/MonitorControl/Statistic.h (clear):

          Made the method virtual, also made virtual in the ACE
          base class Monitor_Base. Now it behaves correctly when
          called on a TAO_Statistic monitor fetched from the registry
          as a Monitor_Base pointer.

        * orbsvcs/tests/unit/Notify/MC/NotificationServiceMonitor/NotificationServiceMonitor.cpp:
        * orbsvcs/tests/unit/Notify/MC/Statistic_Registry/Statistic_Registry.cpp:
        * orbsvcs/tests/unit/Notify/MC/Control/Control.cpp:
        * orbsvcs/tests/unit/Notify/MC/MonitorManager/MonitorManager.cpp:
        * orbsvcs/tests/unit/Notify/MC/MonitorManager/MonitorClient.cpp:
        * orbsvcs/tests/unit/Notify/MC/Statistic/Statistic.cpp:
        * orbsvcs/tests/unit/Notify/MC/MonitorControlExt/MonitorControlExt.cpp:

          Modified these test code files to be in line with recent
          changes to the Notification Service monitors.

Thu May 22 11:43:44 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * tests/Bug_1361_Regression/Echo.cpp:
        * tests/Bug_1361_Regression/client.cpp:

          Reverted changes to this test.  It caused issues with VxWorks.

Wed May 21 19:02:38 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/Makefile.am:
        * tao/Monitor/Monitor_Impl.cpp:
        * utils/monitor/Makefile.am:
        * tests/Monitor/Marshal_Buffer/client.cpp:
        * tests/Monitor/Marshal_Buffer/Makefile.am:

          Changes resulting from the renaming of
          $ACE_ROOT/ace/MonitorControl and its contents.

Wed May 21 15:52:17 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/orbsvcs/Notify/MonitorControl/Statistic_Registry.cpp:
        * orbsvcs/orbsvcs/Notify/MonitorControl/Statistic_Registry.h:
        * orbsvcs/orbsvcs/Notify/MonitorControl/Generic_Registry.cpp: