@@ -11,7 +11,7 @@ TAO_Statistic::type (void) const
 ACE_INLINE size_t
 TAO_Statistic::count (void) const
 {
-  ACE_GUARD_RETURN (ACE_SYNCH_MUTEX, guard, this->mutex_, 0);
+  ACE_GUARD_RETURN (TAO_SYNCH_MUTEX, guard, this->mutex_, 0);
   
   return (this->type_ == TS_COUNTER
           ? static_cast<size_t> (this->last_)
@@ -26,7 +26,7 @@ TAO_Statistic::minimum_sample (void) const
       throw Invalid_Operation( );
     }
 
-  ACE_GUARD_RETURN (ACE_SYNCH_MUTEX, guard, this->mutex_, 0);
+  ACE_GUARD_RETURN (TAO_SYNCH_MUTEX, guard, this->mutex_, 0);
   
   return this->minimum_;
 }
@@ -39,7 +39,7 @@ TAO_Statistic::maximum_sample (void) const
       throw Invalid_Operation ();
     }
 
-  ACE_GUARD_RETURN (ACE_SYNCH_MUTEX, guard, this->mutex_, 0);
+  ACE_GUARD_RETURN (TAO_SYNCH_MUTEX, guard, this->mutex_, 0);
   
   return this->maximum_;
 }
@@ -52,7 +52,7 @@ TAO_Statistic::last_sample (void) const
       throw Invalid_Operation ();
     }
 
-  ACE_GUARD_RETURN (ACE_SYNCH_MUTEX, guard, this->mutex_, 0);
+  ACE_GUARD_RETURN (TAO_SYNCH_MUTEX, guard, this->mutex_, 0);
   
   return this->last_;
 }
